hphp/test/zend/good/ext/posix/tests/posix_getpwuid_variation.php.skipif
<?php 
	if(!extension_loaded("posix")) print "skip - POSIX extension not loaded"; 
?>