hphp/test/zend/bad/ext/posix/tests/posix_setgid_variation3.php.skipif
<?php
        if(!extension_loaded("posix")) print "skip - POSIX extension not loaded";
        if(posix_geteuid() == 0) print "skip - Cannot run test as root.";
?>